Improved a bunch of code for efficiency